fix gap

--- a/src/components/forms/RegisterForm.module.css
+++ b/src/components/forms/RegisterForm.module.css
@@ -1,7 +1,7 @@
 .form {
     display: flex;
     flex-direction: column;
-    /*gap: 0.5rem;*/
+    gap: 0.1rem;
 }
 .input {
     /*padding: 0.5rem;*/
